fix: improve spacing on pricing card toggle

--- a/src/page-components/collections/framework-field-guide/components/pricing-card.module.scss
+++ b/src/page-components/collections/framework-field-guide/components/pricing-card.module.scss
@@ -101,7 +101,7 @@
 .enterpriseToggleText {
 	margin: 0;
 	color: var(--slate-300);
-	padding: 0 0.5rem;
+	padding: 0 var(--spc-2x);
 }
 
 .enterpriseToggleText {
